	* Changed AnimationOutput to be a reference type, and pinned the memory to receive animation updates.
	* Added an overload to AnimationController.RegisterAnimationOutput to take a Frame instead.
	* Fixed overload defaults for texture creation functions when using D3D9Ex.
	* Changed BaseMesh index buffer and vertex buffer to be ancillary objects. They no longer require explicit cleanup.
	
Direct3D 10
	* Added missing creation method overloads to Effect.
	* Added missing Get/SetRawValue methods to EffectVariable.
	* Added GetInputLayout to the InputAssember device stage.
	* Added GetPrimitiveTopology to the InputAssember device stage.
	* Added GetIndexBuffer to the InputAssember device stage.
	* Added GetVertexBuffers to the InputAssember device stage.
	* Added ResourceOptionFlags.GdiCompatible and ResourceOptionFlags.KeyedMutex.
	* Added Resource.SaveTextureToFile, which allows for saving a texture without knowing its concrete type.
	* Fixed a COM reference leak in Device.OpenSharedResource.

Direct3D 11
	* Fixed a COM reference leak in Device.OpenSharedResource.
	* Added IsDataAvailable to the DeviceContext interface.
	* Added Resource.SaveTextureToFile, which allows for saving a texture without knowing its concrete type.

DXGI
	* Changed SwapChain.Dispose to throw if the adapter is in fullscreen mode. This prevents a crash inside DXGI.
	* Added IsFullScreen property to SwapChain as a convenient alternative to GetFullScreenState.
	* Fixed a null reference check in Output.GetClosestMatchingMode.
	* Added Surface1 support.
	* Fixed DXGI constructors that acted like QueryInterface to handle creating objects that already exist in the object table.
	
D3DCompiler
	* Fixed memory issue in Include interface.
	* Added overloads to ShaderBytecode.Compile to take source name for error reporting purposes.
	
DirectWrite
	* Changed TextLayout to inherit from TextFormat.
	
DirectInput
	* Fixed a typo in Device.GetObjectInfoById that caused it to return info by usage instead.